Included timer triggered by start button, as well as first object containing the first question.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Coding Quiz!</title>
+    <title>Wine Quiz!</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,8 +15,8 @@
         <h3 id="timer" style="text-align:center;">60:00</h3>
     </div>  -->
     <main class=" container">
-        <div id="question-container" class = "hide">
-            <h1 id="question">Welcome to your coding quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
+        <div id="question-container">
+            <h1 id="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
             <div id="answer-btns" class="btn-stack">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="js-clock">
-            <h3 id="timer" style="text-align:center;">60:00</h3>
+            <h3 id="timer" style="text-align:center;"></h3>
     
         </div>
     </main>
