reverting changes to pull earlier commit

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>  -->
     <main class=" container">
         <div id="question-container">
-            <h1 id="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
+            <h1 class="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
             <div id="answer-btns" class="btn-stack">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
