--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <div id="question-container">
             <h1 class="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
             <div id="answer-btns" class="btn-stack">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+                <button class="btn1 btn">Answer 1</button>
+                <button class="btn2 btn">Answer 2</button>
+                <button class="btn3 btn">Answer 3</button>
+                <button class="btn4 btn">Answer 4</button>
             </div>
         </div>
         <div class="controls">
