--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
 
 <body>
-    <!-- <div class="js-clock">
-        <h3 id="timer" style="text-align:center;">60:00</h3>
-    </div>  -->
+
     <main class=" container">
         <div id="question-container">
             <h1 class="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
@@ -27,19 +25,15 @@
         <div class="controls">
             <button id="start-btn" class="startbtn">Start!</button>
         </div>
+        <H2 id="high-score">Form for high score</H2>
             </div>
         </div>
 
-        <div class="js-clock">
-            <h3 id="timer" style="text-align:center;"></h3>
     
         </div>
     </main>
    
-    <!-- <div class="js-clock">
-        <h3 id="timer" style="text-align:center;">60:00</h3>
-
-    </div> -->
+   <H2 id="high-score">Form for high score</H2>
     
     <script src="script.js"></script>
 </body>
