running in circles. going back to last push.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main class=" container">
         <div id="question-container">
-            <h1 class="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 5 seconds off your time, and for each correct answer you will receive a point. The clock starts when you click the button. Good luck!</h1>
+            <h1 class="question">Welcome to your wine quiz! Once you click start you will see a series of questions. For each wrong answer you will lose 10 seconds off your time, and therefor 10 seconds off your score. The clock starts when you click the button. Good luck!</h1>
             <div id="answer-btns" class="btn-stack">
                 <button class="btn1 btn">Answer 1</button>
                 <button class="btn2 btn">Answer 2</button>
@@ -25,15 +25,16 @@
         <div class="controls">
             <button id="start-btn" class="startbtn">Start!</button>
         </div>
-        <H2 id="high-score">Form for high score</H2>
             </div>
         </div>
 
+        <div class="js-clock">
+            <h3 id="timer" style="text-align:center;"></h3>
     
         </div>
     </main>
    
-   <H2 id="high-score">Form for high score</H2>
+    <div
     
     <script src="script.js"></script>
 </body>
